feat: port resources util